# RFC-project

./: .gitignore  README.md  config.json  load_playlist.py  main.py  models.py  pyproject.toml  raspberry_pi.py  requirements.txt  rfids.json  vlc-server.sh
PiicoDev/: PiicoDev_RFID.py
http_vlc/: __init__.py  enums.py  exceptions.py  http_vlc.py  mappings.py
src/: client.py  config.py  connection.py  data.py  enums.py  models.py  server.py
