[tool.poetry]
name = "rfc project"
version = "0.1.0"
description = ""
authors = ["Luke Edwards <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
piicodev = "^1.10.0"
dill = "^0.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
